# avr-scheduler

./: ArhitectureDetails.md  CMakeLists.txt  keyboard.c  keyboard.h  main.c  scheduler.c  scheduler.h  usart.c  usart.h
